# tp_amq2_17co2024

./: .gitignore  ApprovalCriteria.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.metaflow/BatchProcessingModel/: latest_run
.metaflow/BatchProcessingModel/1733603388033138/_meta/: _self.json
.metaflow/BatchProcessingModel/1733603388033138/_parameters/0/: 0.attempt.json
.metaflow/BatchProcessingModel/1733603388033138/_parameters/_meta/: _self.json
.metaflow/BatchProcessingModel/1733603388033138/load_data/2/: 0.attempt.json
.metaflow/BatchProcessingModel/1733603388033138/load_data/_meta/: _self.json
.metaflow/BatchProcessingModel/1733603388033138/load_model/3/: 0.attempt.json  0.data.json
.metaflow/BatchProcessingModel/1733603598844158/_meta/: _self.json
.metaflow/BatchProcessingModel/1733603893212043/_meta/: _self.json
.metaflow/BatchProcessingModel/1733603948223764/_meta/: _self.json
.metaflow/BatchProcessingModel/1733614748862709/_meta/: _self.json
.metaflow/BatchProcessingModel/1733615353200437/_meta/: _self.json
.metaflow/BatchProcessingModel/1733615371009785/_meta/: _self.json
.metaflow/BatchProcessingModel/_meta/: _self.json
airflow/config/: airflow.cfg
airflow/dags/: batch_processing.py  batch_processing_catboost.py  daily_batch_processing.py  el_process.py  lt_process.py  retrain_model.py  retrain_the_model.py  train_ridge_model.py  train_simple_model.py  train_the_catboost_model.py  train_the_model.py  train_xgboost_model.py
airflow/dags/config/: default_args.py
airflow/dags/deprecated/: batch_processing.py  train_ridge_model.py  train_xgboost_model.py
airflow/dags/experiment/: experiment_tracker.py
airflow/dags/feature_engineering/: engine_converter.py  generate_dataset.py  mileage_converter.py  multiple_interative_imputer.py  multiple_one_hot_encoder.py  name_splitter.py  owner_mapper.py  seat_rounder.py
airflow/dags/models/: data_loader.py  model_manager.py  prediction_key.py
airflow/secrets/: variables.yaml
dockerfiles/airflow/: Dockerfile  requirements.txt
dockerfiles/fastapi/: Dockerfile  app.py  requirements.txt
dockerfiles/mlflow/: Dockerfile
docs/: mkdocs.yml
docs/docs/: index.md
models/: best_catboost_model.json  best_catboost_model.pkl  best_regression_tree_model.pkl  best_ridge_model.pkl  best_svr_model.pkl  best_xgboost_model.json  best_xgboost_model.pkl  final_pipeline.joblib
notebooks/: 1_dataset.ipynb  2_feature_engineering.ipynb  3_models.ipynb  4_clustering.ipynb  experiment_xgboost.ipynb
reports/figures/: pipeline_visualization.html
tp_amq2_17co2024/: __init__.py  app.py  batch_prediction.py  batch_processing.py  dataset.py  features.py  final_pipeline.joblib  front.py  main.py  pipeline_.py  plots.py  pred.py  util.py  visualize_pipeline.py
tp_amq2_17co2024/feature_engineering/: generate_dataset.py  max_power_converter.py  model_dropper.py  multiple_interative_imputer.py  torque_standardizer.py
tp_amq2_17co2024/modeling/: predict.py  train.py
tp_amq2_17co2024/models/: cars_pipeline.py  model_input.py  model_loader.py  model_output.py  used_car_quote_nn.py
tp_amq2_17co2024/schemas/: __init__.py  schemas.py
(+761 files in other folders)
