[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tp_amq2_17co2024"
version = "0.1.0"
description = "TP"
authors = ["Iñaki Larrumbide <ilarrumbide10@gmail.com>", "Claudio Barril <claudiobarril@gmail.com>", "Christian Pisani Testa <christian.tpg@gmail.com>"]
license = "LICENSE"
readme = "README.md"
package-mode = false

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["tp_amq2_17co2024"]
force_sort_within_sections = true

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
pygame = "^2.5.2"
torch = "^2.5.0"
catboost = "^1.2.7"
xgboost = "^2.1.1"
optuna = "^4.0.0"
scikit-optimize = "^0.10.2"
hdbscan = "^0.8.39"
jupyter = "^1.0.0"
unicorn = "^2.1.1"
fastapi = "^0.115.4"
boto = "^2.49.0"
boto3 = "^1.35.63"
mlflow = "^2.17.2"
uvicorn = "^0.32.0"
streamlit = "^1.40.2"
requests = "^2.32.3"
redis = "^5.2.1"
smart-open = "^7.0.5"
dill = "^0.3.9"
