[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tp_amq2_17co2024"
version = "0.1.0"
description = "TP"
authors = ["Iñaki Larrumbide <ilarrumbide10@gmail.com>", "Claudio Barril <claudiobarril@gmail.com>", "Christian Pisani Testa <christian.tpg@gmail.com>"]
license = "LICENSE"
readme = "README.md"
package-mode = false

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["tp_amq2_17co2024"]
force_sort_within_sections = true

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
pygame = "^2.5.2"
catboost = "^1.2.7"
xgboost = "^2.1.1"
scikit-optimize = "^0.10.2"
unicorn = "^2.1.1"
fastapi = "^0.115.4"
boto = "^2.49.0"
boto3 = "^1.35.63"
mlflow = "^2.17.2"
uvicorn = "^0.32.0"
streamlit = "^1.40.2"
requests = "^2.32.3"
redis = "^5.2.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
smart-open = "^7.0.5"
dill = "^0.3.9"
